Ajustes en modulo de animales
