# routes/api.php
@@ -56,6 +56,7 @@ Route::get('/animales', [AnimalesController::class, 'index']);
 Route::post('/animales', [AnimalesController::class, 'store']);
 Route::get('/animales/{id}', [AnimalesController::class, 'show']);
 Route::delete('/animales/{id}', [AnimalesController::class, 'destroy']);
+Route::put('/animales/{id}', [AnimalesController::class, 'update']);
 Route::get('/animales/report/pdf', [AnimalesController::class, 'generarPDFAnimales']);
 
 Route::get('/adoptantes', [AdoptanteController::class, 'getAll']);
